<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:id="@+id/atas"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="#000000"
            android:layout_alignParentTop="true"
            android:padding="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_welcome"
                android:textColor="#FFFFFF"/>
        <TextView
                android:id="@+id/username"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="-"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/tengah"
            android:layout_below="@+id/atas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                    android:id="@+id/menu1"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="#FCE4EC">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/teks_menu1"
                        android:layout_gravity="center_horizontal|center_vertical"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:id="@+id/menu2"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="#F3E5F5">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/teks_menu2"
                        android:layout_gravity="center_horizontal|center_vertical"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                    android:id="@+id/menu3"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="#E8F5E9">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/teks_menu3"
                        android:layout_gravity="center_horizontal|center_vertical"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:id="@+id/menu4"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="#FFF8E1">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/teks_menu4"
                        android:layout_gravity="center_horizontal|center_vertical"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/bawah"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="#000000"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal">
        <Button
                android:id="@+id/buttonLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/text_logout"/>

    </LinearLayout>

</RelativeLayout>